--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_face_pile
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/cmedamine/flutter-face-pile
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
