--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_face_pile
-description: A new Flutter package project.
+description: A group of overlapping round avatars are called face piles.
+issue_tracker: https://github.com/cmedamine/flutter-face-pile/issues
+repository: https://github.com/cmedamine/flutter-face-pile
 version: 0.0.1
-homepage: https://github.com/cmedamine/flutter-face-pile
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
