--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_face_pile
-description: A group of overlapping round avatars are called face piles.
+description: A group of overlapping round avatars are called face piles, a face pile is a series of overlapping avatar images that come and go as users join and leave a given group.
 issue_tracker: https://github.com/cmedamine/flutter-face-pile/issues
 repository: https://github.com/cmedamine/flutter-face-pile
-version: 0.0.2
+version: 0.0.3
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
